CPT: Prevent post actions from collapsing on itself

--- a/client/my-sites/post-type-list/style.scss
+++ b/client/my-sites/post-type-list/style.scss
@@ -75,6 +75,7 @@
 .post-type-list__post-actions {
 	margin-left: auto;
 	margin-right: -8px;
+	flex-shrink: 0;
 }
 
 .post-type-list__post-actions .button {
